--- a/frontend/src/containers/Store/Store.module.css
+++ b/frontend/src/containers/Store/Store.module.css
@@ -4,7 +4,7 @@
     align-content: space-between;
 }
 
-.ProductList > div, .CategoryList > * {
+.ProductList > div, .CategoryList > ul, .CategoryList > form {
     flex-basis: 100%;
 }
 
